--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1152,6 +1152,12 @@ config STUNE_ASSIST
 	help
 	  This option enables the configuration of default SchedTune
 	  parameters from kernel.
+config DYNAMIC_STUNE_BOOST
+	bool "Dynamic SchedTune boosting support"
+	depends on SCHED_TUNE
+	help
+	  This option extends the SchedTune framework and provides APIs to
+	  activate and reset SchedTune boosting from anywhere in the kernel.
 
 	  If unsure, say N.
 
