--- a/arch/arm64/boot/dts/qcom/trinket-idp.dtsi
+++ b/arch/arm64/boot/dts/qcom/trinket-idp.dtsi
@@ -194,8 +194,8 @@
 	qcom,flash-disable-soc = <10>;
 	qcom,hw-die-temp-mitigation;
 	qcom,float-option = <1>;
-	qcom,thermal-mitigation = <3100000 2900000 2700000 2300000 1500000
-					1000000 800000 500000 200000>;
+	qcom,thermal-mitigation = <3000000 2500000 2200000 
+			2000000 1500000 1000000 800000 500000 200000>;
 };
 
 &usb0 {
